Fixed some issues with evaluating expressions containing variables -- the state is now held and adjusted properly at run-time.